fix iphone height bug
on iphone, 100vh includes height for the address bar,
which causes a small vertical scroll.

using height: 100% instead gives the behavior we want,
where we the address bar doesn't overlap the app,
but it has to be specified all the way up the heirarchy.

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -39,6 +39,14 @@ $picker-width-wide: $picker-width-narrow + 3.1;
 @import "vehicle_icon";
 @import "vehicle_map";
 
+html,
+body,
+main,
+#app,
+.m-app {
+  height: 100%;
+}
+
 body {
   background-color: $color-bg-base;
   color: $color-font-dark;
@@ -47,7 +55,6 @@ body {
 }
 
 .m-app {
-  height: 100vh;
   display: flex;
   flex-direction: column;
   width: 100vw;
